CSS parcialmente feito

--- a/Responsive Web Design/Survey Form/index.html
+++ b/Responsive Web Design/Survey Form/index.html
@@ -32,15 +32,15 @@
             </fieldset>
             <fieldset>
                 <legend>When did you start following her?</legend>
-                <label for="music-career"><input id="music-career" name="career" type="radio" value="music-career" checked>Music career</label>
-                <label for="acting-career"><input id="acting-career" name="career" type="radio" value="music-career">Acting career</label>
+                <label for="music-career"><input id="music-career" name="career" type="radio" value="music-career" class="inline" checked>Music career</label>
+                <label for="acting-career"><input id="acting-career" name="career" type="radio" value="music-career" class="inline">Acting career</label>
             </fieldset>
             <fieldset>
                 <legend>If you've watched Only Murders In The Building, what are your favorite seasons?</legend>
-                <label for="season-1">Season 1<input id="season-1" value="1" name="season" type="checkbox"></label>
-                <label for="season-2">Season 2<input id="season-2" value="2" name="season" type="checkbox"></label>
-                <label for="season-3">Season 3<input id="season-3" value="3" name="season" type="checkbox"></label>
-                <label for="season-4">Season 4<input id="season-4" value="4" name="season" type="checkbox"></label>
+                <label for="season-1">Season 1<input id="season-1" value="1" name="season" type="checkbox" class="inline"></label>
+                <label for="season-2">Season 2<input id="season-2" value="2" name="season" type="checkbox" class="inline"></label>
+                <label for="season-3">Season 3<input id="season-3" value="3" name="season" type="checkbox" class="inline"></label>
+                <label for="season-4">Season 4<input id="season-4" value="4" name="season" type="checkbox" class="inline"></label>
             </fieldset>
             <fieldset>
                 <label for="description">What do you like most about Selena?
