Finalizado CSS e HTML

--- a/Responsive Web Design/Survey Form/index.html
+++ b/Responsive Web Design/Survey Form/index.html
@@ -37,14 +37,14 @@
             </fieldset>
             <fieldset>
                 <legend>If you've watched Only Murders In The Building, what are your favorite seasons?</legend>
-                <label for="season-1">Season 1<input id="season-1" value="1" name="season" type="checkbox" class="inline"></label>
-                <label for="season-2">Season 2<input id="season-2" value="2" name="season" type="checkbox" class="inline"></label>
-                <label for="season-3">Season 3<input id="season-3" value="3" name="season" type="checkbox" class="inline"></label>
-                <label for="season-4">Season 4<input id="season-4" value="4" name="season" type="checkbox" class="inline"></label>
+                <label for="season-1"><input id="season-1" value="1" name="season" type="checkbox" class="inline">Season 1</label>
+                <label for="season-2"><input id="season-2" value="2" name="season" type="checkbox" class="inline">Season 2</label>
+                <label for="season-3"><input id="season-3" value="3" name="season" type="checkbox" class="inline">Season 3</label>
+                <label for="season-4"><input id="season-4" value="4" name="season" type="checkbox" class="inline">Season 4</label>
             </fieldset>
             <fieldset>
                 <label for="description">What do you like most about Selena?
-                    <textarea id="description" name="description" rows="3" cols="30" placeholder="She's kind..."></textarea>
+                    <textarea id="description" name="description" rows="5" cols="30" placeholder="She's kind..."></textarea>
                 </label>
             </fieldset>
             <input id="submit" type="submit" value="Submit">
