Update HTML structure and enhance CSS styling

--- a/Responsive Web Design/Tribute Page/index.html
+++ b/Responsive Web Design/Tribute Page/index.html
@@ -16,39 +16,56 @@
                 <figcaption id="img-caption">Wanda Maximoff dressed as Scarlet Witch for Halloween in WandaVision's episode 6 "All-New Halloween Spooktacular!"</figcaption>
             </figure>
             <section id="tribute-info">
-                <p>
-                    Wanda Maximoff grew up in Sokovia with her brother Pietro. 
-                    Following the death of their parents caused by the explosion of a Stark Industries bomb, the twins became radicalised and agreed to undergo experiments with the Scepter containing the Mind Stone, 
-                    which unlocked Wanda's ability to harness Chaos Magic.
-                </p>
-                <p>
-                    The twins allied with Ultron to seek revenge on Tony Stark, but eventually switched sides and joined the Avengers.
-                    Pietro's life was lost during the fight, but Wanda survived and became a member of the Avengers.
-                </p>
-                <p>
-                    Over the next few years, Wanda started a romantic relationship with Vision.
-                    Under threat from Thanos and the Black Order, who sought the Infinity Stone in Vision's head, Wanda had to destroy the Mind Stone in an attempt to stop Thanos, killing Vision in the process.
-                    However, Thanos used the Time Stone to reverse Vision's death, and then took the stone from Vision.
-                </p>
-                <p>
-                    After coming back from the Snap, Wanda fought alongside the Avengers against Thanos.
-                    Following Thanos' defeat, Wanda tried to locate Vision's body, but realized that he was truly gone.
-                    She went to Westview, where she and Vision had bought a property. 
-                </p>
-                <p>
-                    Her grief over losing everyone she ever loved manifested in a huge surge of power, creating the Westview Anomaly and a construct of her lost love.
-                    Inside the Hex, Wanda also had two children-twins named Billy and Tommy Maximoff, whom she created through magic.
-                </p>
-                <p>
-                    After realizing she was causing pain to the citizens of Westview, Wanda decided to end the Hex, losing Vision once again, and also losing her children.
-                    Isolated, Wanda began studying the Darkhold, which slowly corrupted her mind, leading her to believe that the only way for her to see her children again was to find them in a different universe.
-                    In her quest to find them, Wanda went on a violent rampage.
-                </p>
-                <p>
-                    Finally, after realizing her actions caused her to be rejected by Tommy and Billy from an alternate universe, 
-                    Wanda destroyed every version of the Darkhold within the multiverse, after demolishing the Darkhold Castle atop Mount Wundagore, taking her own life in the process.
-                </p>
-                <h3>Learn more about Wanda's life on <a id="tribute-link" target="_blank" href="https://marvelcinematicuniverse.fandom.com/wiki/Scarlet_Witch">this</a> wiki page.</h3>
+                <h3 id="headline">A brief glimpse into Wanda's life:</h3>
+                <ul>
+                    <li>
+                        <p>
+                            Wanda Maximoff grew up in Sokovia with her brother Pietro. 
+                            Following the death of their parents caused by the explosion of a Stark Industries bomb, the twins became radicalised and agreed to undergo experiments with the Scepter containing the Mind Stone, 
+                            which unlocked Wanda's ability to harness Chaos Magic.
+                        </p>
+                    </li>
+                    <li>
+                    <p>
+                        The twins allied with Ultron to seek revenge on Tony Stark, but eventually switched sides and joined the Avengers.
+                        Pietro's life was lost during the fight, but Wanda survived and became a member of the Avengers.
+                    </p>
+                    </li>
+                    <li>
+                        <p>
+                            Over the next few years, Wanda started a romantic relationship with Vision.
+                            Under threat from Thanos and the Black Order, who sought the Infinity Stone in Vision's head, Wanda had to destroy the Mind Stone in an attempt to stop Thanos, killing Vision in the process.
+                            However, Thanos used the Time Stone to reverse Vision's death, and then took the stone from Vision.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            After coming back from the Snap, Wanda fought alongside the Avengers against Thanos.
+                            Following Thanos' defeat, Wanda tried to locate Vision's body, but realized that he was truly gone.
+                            She went to Westview, where she and Vision had bought a property. 
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            Her grief over losing everyone she ever loved manifested in a huge surge of power, creating the Westview Anomaly and a construct of her lost love.
+                            Inside the Hex, Wanda also had two children-twins named Billy and Tommy Maximoff, whom she created through magic.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            After realizing she was causing pain to the citizens of Westview, Wanda decided to end the Hex, losing Vision once again, and also losing her children.
+                            Isolated, Wanda began studying the Darkhold, which slowly corrupted her mind, leading her to believe that the only way for her to see her children again was to find them in a different universe.
+                            In her quest to find them, Wanda went on a violent rampage.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            Finally, after realizing her actions caused her to be rejected by Tommy and Billy from an alternate universe, 
+                            Wanda destroyed every version of the Darkhold within the multiverse, after demolishing the Darkhold Castle atop Mount Wundagore, taking her own life in the process.
+                        </p>
+                    </li>
+                </ul>
+                <h4>Learn more about Wanda's life on <a id="tribute-link" target="_blank" href="https://marvelcinematicuniverse.fandom.com/wiki/Scarlet_Witch">this</a> wiki page.</h4>
             </section>
         </main>
     </body>
