Fix navbar overflow issue and add missing styles for pre and span tags

--- a/Responsive Web Design/Technical Documentation Page/index.html
+++ b/Responsive Web Design/Technical Documentation Page/index.html
@@ -36,7 +36,7 @@
             <header>Hello world</header>
             <article>
                 <p>To get started with writing Python, open any text editor and write your first "Hello world" Python code:</p>
-                <code>print("Hello, world!")</code>
+                <pre><code>print("Hello, world!")</code></pre>
                 <p>Remember to use the .py file extension.</p>
             </article>
         </section>
@@ -50,7 +50,7 @@
                 <h1>Comments</h1>
                 <p>Comments can be used to explain code, make it more readable and prevent execution when testing code.</p>
                 <p>Comments start with a <span>#</span>:</p>
-                <code># This is a comment</code>
+                <pre><code># This is a comment</code></pre>
             </article>
         </section>
         <section class="main-section" id="Variables">
@@ -66,11 +66,11 @@
                 </ul>
                 <h1>Declaring variables</h1>
                 <p>You can declare a variable by simply assigning it a value, for example:</p>
-                <code>x = 42</code>
+                <pre><code>x = 42</code></pre>
                 <p>Python allows you to assign values to multiple variables in one line:</p>
-                <code>x, y, z = "Orange", "Banana", "Cherry"</code>
+                <pre><code>x, y, z = "Orange", "Banana", "Cherry"</code></pre>
                 <p>And you can assign the same value to multiple variables in one line:</p>
-                <code>x = y = z = "Orange"</code>
+                <pre><code>x = y = z = "Orange"</code></pre>
                 <h1>Variable scope</h1>
                 <p>When you declare a variable outside of any function, it is called a global variable, because it is available to any other code in the current document. When you declare a variable within a function, it is called a local variable, because it is available only within that function.</p>
                 <pre><code>x = 10 # global variable
