Fix image link and update README.md

--- a/Responsive Web Design/Tribute Page/index.html
+++ b/Responsive Web Design/Tribute Page/index.html
@@ -12,7 +12,7 @@
             <h1 id="title">Wanda Maximoff</h1>
             <p class="quote">"I can't feel you... I can't feel you."</p>
             <figure id="img-div">
-                <img id="image" src="/img/halloween-wanda.jpeg" alt="Wanda Maximoff dressed as Scarlet Witch for Halloween in WandaVision's episode 6 'All-New Halloween Spooktacular!'">
+                <img id="image" src="./img/halloween-wanda.jpeg" alt="Wanda Maximoff dressed as Scarlet Witch for Halloween in WandaVision's episode 6 'All-New Halloween Spooktacular!'">
                 <figcaption id="img-caption">Wanda Maximoff dressed as Scarlet Witch for Halloween in WandaVision's episode 6 "All-New Halloween Spooktacular!"</figcaption>
             </figure>
             <section id="tribute-info">
