Finish basic CSS styling

--- a/Responsive Web Design/Product Landing Page/index.html
+++ b/Responsive Web Design/Product Landing Page/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="freeCodeCamp Bookshop product landing page">
     <title>Product Landing Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -63,28 +66,38 @@
                 <div class="gallery">
                     <div>
                         <a href=""><img src="https://m.media-amazon.com/images/I/71un2hI4mcL.jpg" alt="The Hunger Games by Suzanne Collins book cover"></a>
-                        <span class="sale">$14.99</span>
-                        <p class="price-tag">$13.94</p>
+                        <div class="prices">
+                            <span class="sale price-tag">$14.99</span>
+                            <p class="price-tag">$13.94</p>
+                        </div>
                     </div>
                     <div>
                         <a href=""><img src="https://m.media-amazon.com/images/I/61Gs9LIHu8L.jpg" alt="Catching Fire by Suzanne Collins book cover"></a>
-                        <span class="sale">$14.99</span>
-                        <p class="price-tag">$13.94</p>
+                        <div class="prices">
+                            <span class="sale price-tag">$14.99</span>
+                            <p class="price-tag">$13.94</p>
+                        </div>
                     </div>
                     <div>
                         <a href=""><img src="https://m.media-amazon.com/images/I/61n5pTMvmpL.jpg" alt="Mockingjay by Suzanne Collins book cover"></a>
-                        <span class="sale">$14.99</span>
-                        <p class="price-tag">$13.94</p>
+                        <div class="prices">
+                            <span class="sale price-tag">$14.99</span>
+                            <p class="price-tag">$13.94</p>
+                        </div>
                     </div>
                     <div>
                         <a href=""><img src="https://m.media-amazon.com/images/I/819tY-gDcWL.jpg" alt="The Ballad of Songbirds and Snakes by Suzanne Collins book cover"></a>
-                        <span class="sale">$16.99</span>
-                        <p class="price-tag">$15.80</p>
+                        <div class="prices">
+                            <span class="sale price-tag">$16.99</span>
+                            <p class="price-tag">$15.80</p>
+                        </div>
                     </div>
                     <div>
                         <a href=""><img src="https://m.media-amazon.com/images/I/81aY1lxk+9L.jpg" alt="To Kill a Mockingbird by Harper Lee book cover"></a>
-                        <span class="sale">$16.99</span>
-                        <p class="price-tag">$15.80</p>
+                        <div class="prices">
+                            <span class="sale price-tag">$16.99</span>
+                            <p class="price-tag">$15.80</p>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -111,6 +124,12 @@
                         <a href=""><img src="https://images.penguinrandomhouse.com/cover/9781640096738" alt="The Migrant Rain Falls in Reverse by Vinh Nguyen book cover"></a>
                         <p class="price-tag">$25.11</p>
                     </div>
+                </div>
+            </section>
+            <section>
+                <header class="section-title teaser-title">Make sure to read Sunrise on the Reaping before the movie release!</header>
+                <div>
+                    <iframe src="https://www.youtube.com/embed/a0Ptnzz4jAw" frameborder="0" allowfullscreen></iframe>
                 </div>
             </section>
         </div>
