Fix duplicate id description

--- a/Responsive Web Design/Survey Form/index.html
+++ b/Responsive Web Design/Survey Form/index.html
@@ -43,8 +43,8 @@
                 <label for="season-4"><input id="season-4" value="4" name="season" type="checkbox" class="inline">Season 4</label>
             </fieldset>
             <fieldset>
-                <label for="description">What do you like most about Selena?
-                    <textarea id="description" name="description" rows="5" cols="30" placeholder="She's kind..."></textarea>
+                <label for="comment">What do you like most about Selena?
+                    <textarea id="comment" name="comment" rows="5" cols="30" placeholder="She's kind..."></textarea>
                 </label>
             </fieldset>
             <input id="submit" type="submit" value="Submit">
