Finish welcome section

--- a/Responsive Web Design/Personal Portfolio Page/index.html
+++ b/Responsive Web Design/Personal Portfolio Page/index.html
@@ -11,18 +11,18 @@
         <nav id="navbar">
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#work">Work</a></li>
+                <li><a href="#projects">Work</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <header>
-            <h1>Hey! I'm Marlon 👋</h1>
-            <h2>Right now, I'm</h2>
-            <div>
+            <h1>Hey! I&rsquo;m <span>Marlon</span></h1>
+            <h2>Right now, I&rsquo;m</h2>
+            <div class="skills">
                 <div class="learning">
                     <h3>learning</h3>
                     <ul>
-                        <li>Data Science
+                        <li class="field">Data Science
                             <ul>
                                 <li>Pandas</li>
                                 <li>SQL</li>
@@ -30,17 +30,18 @@
                         </li>
                     </ul>
                 </div>
+                <div class="vertical"></div>
                 <div class="mastering">
                     <h3>mastering</h3>
                     <ul>
-                        <li>Web Development
+                        <li class="field">Web Development
                             <ul>
                                 <li>HTML</li>
                                 <li>CSS</li>
                                 <li>JavaScript</li>
                             </ul>
                         </li>
-                        <li>Data Science
+                        <li class="field">Data Science
                             <ul>
                                 <li>Python</li>
                                 <li>Excel</li>
@@ -51,8 +52,40 @@
             </div>
         </header>
     </section>
-    <section id="about"></section>
-    <section id="work"></section>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I&rsquo;m currently exploring different areas in tech, but I&rsquo;m especially drawn to Data Science. Lately, I&rsquo;ve been diving into tools like Python, Pandas, SQL, and Excel to build up my skills and get hands-on with real data.</p>
+        <p>In my free time, I enjoy learning new technologies and working on personal projects.</p>
+    </section>
+    <section id="projects">
+        <h2>These are some of my projects</h2>
+        <div>
+            <a href="http://" target="_blank" class="project-tile">
+                <img src="" alt="" class="project-image">
+                <p class="project-title"></p>
+            </a>
+            <a href="http://" target="_blank" class="project-tile">
+                <img src="" alt="" class="project-image">
+                <p class="project-title"></p>
+            </a>
+            <a href="http://" target="_blank" class="project-tile">
+                <img src="" alt="" class="project-image">
+                <p class="project-title"></p>
+            </a>
+            <a href="http://" target="_blank" class="project-tile">
+                <img src="" alt="" class="project-image">
+                <p class="project-title"></p>
+            </a>
+            <a href="http://" target="_blank" class="project-tile">
+                <img src="" alt="" class="project-image">
+                <p class="project-title"></p>
+            </a>
+            <a href="http://" target="_blank" class="project-tile">
+                <img src="" alt="" class="project-image">
+                <p class="project-title"></p>
+            </a>
+        </div>
+    </section>
     <section id="contact"></section>
 </body>
 </html>
