Finish about me section

--- a/Responsive Web Design/Personal Portfolio Page/index.html
+++ b/Responsive Web Design/Personal Portfolio Page/index.html
@@ -16,7 +16,7 @@
             </ul>
         </nav>
         <header>
-            <h1>Hey! I&rsquo;m <span>Marlon</span></h1>
+            <h1>Hey! I&rsquo;m <span id="header-name">Marlon</span></h1>
             <h2>Right now, I&rsquo;m</h2>
             <div class="skills">
                 <div class="learning">
@@ -53,9 +53,13 @@
         </header>
     </section>
     <section id="about">
-        <h2>About Me</h2>
-        <p>I&rsquo;m currently exploring different areas in tech, but I&rsquo;m especially drawn to Data Science. Lately, I&rsquo;ve been diving into tools like Python, Pandas, SQL, and Excel to build up my skills and get hands-on with real data.</p>
-        <p>In my free time, I enjoy learning new technologies and working on personal projects.</p>
+        <h1>About Me</h1>
+        <div class="description">
+            <p>Hello! I am <span class="about-span">Marlon Destro</span> from <span class="about-span">São Paulo, Brasil.</span></p>
+            <p>I&rsquo;m a <span class="about-span">Computer Science</span> student at <span class="about-span">Universidade Federal do ABC</span>, currently exploring different areas in tech, with a particular interest in Data Science.</p>
+            <p>Lately, I&rsquo;ve been diving into tools like Python, Pandas, SQL, and Excel to build up my skills and get hands-on with real data.</p>
+            <p>In my free time, I enjoy learning about new technologies, working on personal projects, and unwinding with a good movie or TV show.</p>
+        </div>
     </section>
     <section id="projects">
         <h2>These are some of my projects</h2>
